--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <version>4.4.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.10.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
