--- a/src/main/resources/docker/docker-compose.yml
+++ b/src/main/resources/docker/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3'
 services:
     db-mongo:
-        build: ./db-mongo
+        image: mongo:latest
+        container_name: "mongodb4"
         ports:
         - "27017-27019:27017-27019"
+        environment:
+            - MONGO_INITDB_ROOT_USERNAME=root
+            - MONGO_INITDB_ROOT_PASSWORD=rootpassword
+            - MONGO_INITDB_DATABASE=zoo
+        volumes:
+            - ./db-mongo/create_user.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+
