--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,50 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.7</version>
+            </plugin>
+
+            <!-- Adds the ObjectBox annotation processor to enable code generation -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>io.objectbox</groupId>
+                            <artifactId>objectbox-processor</artifactId>
+                            <version>2.6.0</version>
+                        </path>
+                    </annotationProcessorPaths>
+                    <annotationProcessors>
+                        <annotationProcessor>io.objectbox.processor.ObjectBoxProcessorShim</annotationProcessor>
+                    </annotationProcessors>
+                    <compilerArgs>
+                        <arg>-Aobjectbox.modelPath=${project.basedir}/objectbox-models/default.json</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+
+            <!-- Runs the ObjectBox byte-code transformer after Maven finishes compiling -->
+            <plugin>
+                <groupId>io.objectbox</groupId>
+                <artifactId>objectbox-maven-plugin</artifactId>
+                <version>1.2.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>transform</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <debug>true</debug>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -43,6 +87,19 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>3.10.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.objectbox/objectbox-java -->
+        <dependency>
+            <groupId>io.objectbox</groupId>
+            <artifactId>objectbox-java</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
+        <!-- Native libraries, you can remove the ones for systems you do not support -->
+        <dependency>
+            <groupId>io.objectbox</groupId>
+            <artifactId>objectbox-windows</artifactId>
+            <version>2.6.0</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
@@ -50,8 +107,23 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
-
-
     </dependencies>
 
+
+    <!-- ObjectBox artifacts are available on jCenter -->
+    <repositories>
+        <repository>
+            <id>jcenter</id>
+            <url>https://jcenter.bintray.com/</url>
+        </repository>
+    </repositories>
+
+    <!-- TODO remove and probably replace with jcenter once plugin synced to jcenter -->
+    <pluginRepositories>
+        <pluginRepository>
+            <id>bintray-objectbox-objectbox</id>
+            <name>bintray-plugins</name>
+            <url>https://dl.bintray.com/objectbox/objectbox</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
